--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </p>
                         <p>
                             <i class="fab fa-linkedin" aria-hidden="true"></i>
-                            <a href="https://www.linkedin.com/in/your-link">Your name on LinkdIn</a>
+                            <a href="https://en.wikipedia.org/wiki/Yakub_(Nation_of_Islam)"> CLICK FOR SUPRISE</a>
                         </p>
                 </article>
             </section>
