--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                     <h2>Contact me.</h2>
                         <p>
                             <i class="fa fa-envelope" aria-hidden="true"></i>
-                            <a href="mailto:your-email@example.com">email@example.com</a>
+                            <a href="https://www.youtube.com/watch?v=8-m8eVNzBtQ">!MYTHIC THUMBNAIL!</a>
                         </p>
                         <p>
                             <i class="fab fa-github" aria-hidden="true"></i>
-                            <a href="github.com/gh-username">username</a>
+                            <a href="https://www.youtube.com/watch?v=5OFy3_3ys0A">THE AGARTHAN LORE EXPLAINED</a>
                         </p>
                         <p>
                             <i class="fab fa-linkedin" aria-hidden="true"></i>
