--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                     <li>Technology 3 (eg. Azure Cognitive Services)</li>
                 </ul>
 
-                <a class="link-btn" href="">See it Live</a>
-                <a class="link-btn" href="">GitHub Repo</a>
+                <a class="link-btn" href="https://www.youtube.com/watch?v=3hVXt9NYiJA">Agarthan National Anthem</a>
+                <a class="link-btn" href="https://in.pinterest.com/pin/349591989842475135/">HOW TO FIND AGARTHA</a>
                 
             </div>
         </article>
