--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2 class="banner">My Projects</h2>
         <main>
         <article class="project">
-            <img src="images/image1.png">
+            <img src="images/Agartha_and_Shambhala,_Land_of_Advanced_Races,_Raymond_Bernard.png">
             <div>
                 <h3>
                     [PROJECT TITLE]
